Add joining to tasting room
